# sebec-theme

./: .gitignore  CHANGELOG.md  README.md  generate.py  package.json  pyproject.toml  theme.yml  vsc-extension-quickstart.md
design/: palette.afdesign  palette.v2.afdesign
package/: Sebec.itermcolors  Twilight Lake.itermcolors  palette.html  twilight-lake-windows-terminal.json
package/iterm2/: Sebec.itermcolors
package/vscode/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
package/vscode/themes/: sebec-dawn-color-theme.json  sebec-dusk-color-theme.json  sebec-sunrise-color-theme.json  sebec-twilight-color-theme.json  (+4 more)
package/windows-terminal/: Sebec.json
sebec/: color.py  iterm.py  palette.py  shared.py  terminal.py  util.py
sebec/exporters/: iterm.py  vscode.py  windows_terminal.py
sebec/iterm/: themes.py  writer.py
sebec/models/: formatters.py  styles.py  theme.py
sebec/parser/: __init__.py  base.py  formatters.py  terminal.py  theme.py  vscode.py
sebec/parser_new/: base.py  formatters.py  terminal.py  theme.py  vscode.py
sebec/scripts/: generate.py  print_colors.py  update_colors.py
sebec/vstheme/: __init__.py  base.py  sunrise.py  twilight.py
themes/: sebec-sunrise-color-theme.json  sebec-twilight-color-theme.json
twilight_lake/: color.py
twilight_lake/exporters/: iterm.py  vscode.py  windows_terminal.py
twilight_lake/models/: formatters.py  terminal.py  theme.py  vscode.py
twilight_lake/parser/: __init__.py  colors.py  formatters.py  terminal.py  theme.py  vscode.py
twilight_lake/parser copy/: formatters.py  terminal.py
twilight_lake/scripts/: update_colors.py
ymls/: dawn.yml  dusk.yml  sunrise.yml  theme.yml  twilight.yml
(+18 files in other folders)
